--- a/catalog/view/theme/default/stylesheet/global00.css
+++ b/catalog/view/theme/default/stylesheet/global00.css
@@ -2581,9 +2581,20 @@ p.error404 img {margin:0 10px 0 0;}
                    margin: 0 0 0 0px;
                    width: 87px;}
 .ui-border th #dgh{border:1px solid #CCC}
-.ui-border th #tt{border:1px solid #CCC}
+.ui-border th #tt{border:1px solid #CCC; width: 115px; padding: 2px; display: block;}
 .ui-border .pt{padding-top:20px}
 
+.sign_pending {
+}
+.sign_completed {
+    background: #4DBAE2;
+}
+.sign_cancelled {
+    background: #cccc;
+}
+.sign_finished {
+    background: #03D33E;
+}
 
 span.error {
     color: #FF0000;
