--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -1484,3 +1484,49 @@ table.radio tr.highlight:hover td {
     font-weight: normal;
     font-size: 16px;
 }
+.v_center {
+    vertical-align: middle;
+}
+
+#order_products_frm {
+    
+}
+#order_products_frm table {
+    
+}
+#order_products_frm input[type="text"] {
+    width: 90%;
+    height: 30px;
+    padding-left: 5px;
+}
+#order_products_frm .order_submit input[type="button"] {
+    width: 100px;
+    background: -moz-linear-gradient(center top , #FFAC59 0%, #FF9428 100%) repeat scroll 0 0 transparent;
+    border: 0 none;
+    border-radius: 2px 2px 2px 2px;
+    box-shadow: 1px 0px 3px 0 rgba(0, 0, 0, 0.6);
+    color: black !important;
+    display: inline-block;
+    font-family: 'UTM_Bebas';
+    font-size: 18px;
+    padding: 3px 10px;
+    text-align: center;
+}
+
+#order_products_frm .order_submit input[type="button"]:hover{
+    background: #606060;
+    background: -moz-linear-gradient(top,#606060 0%,#2F2F2F 100%);
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#606060),color-stop(100%,#2F2F2F));
+    background: -webkit-linear-gradient(top,#606060 0%,#2F2F2F 100%);
+    background: -o-linear-gradient(top,#606060 0%,#2F2F2F 100%);
+    background: -ms-linear-gradient(top,#606060 0%,#2F2F2F 100%);
+    background: linear-gradient(top,#606060 0%,#2F2F2F 100%);
+    color: white!important;
+}
+
+#order_products_frm .error {
+    border: 1px solid #ff0000 !important;
+}
+.a_center {
+    text-align: center !important;
+}
