--- a/catalog/view/theme/default/stylesheet/global00.css
+++ b/catalog/view/theme/default/stylesheet/global00.css
@@ -2509,11 +2509,14 @@ p.error404 img {margin:0 10px 0 0;}
      padding: 1px 16px;
      text-align: center;}
 #tim:hover{background: -moz-linear-gradient(center top , #FFAC59 0%, #FF9428 100%) repeat scroll 0 0 transparent;}
-#tatcadonhang li{background-color: #666666;
-                 border-left: 1px solid #000000;
-                 float: left;
-                 padding: 10px 24px 10px 25px;
-                 width: 91px;}
+#tatcadonhang li{
+    text-align: center;
+    background-color: #666666;
+    border-left: 1px solid #000000;
+    float: left;
+    padding: 10px 24px 10px 10px;
+    width: 131px;
+}
 #tatcadonhang #tcdh{color:#fff}
 #tatcadonhang li input{ color:#ff0	; font-family:'UTM_Bebas'; font-size:16px}
 
