--- a/trunk/catalog/view/theme/default/stylesheet/tipTip.css
+++ b/trunk/catalog/view/theme/default/stylesheet/tipTip.css
@@ -28,7 +28,7 @@
 	font-size: 11px;
 	color: #fff;
 	text-shadow: 0 0 2px #000;
-	padding: 4px 8px;
+	padding: 10px;
 	border: 1px solid rgba(255,255,255,0.25);
 	background-color: rgb(25,25,25);
 	background-color: rgba(25,25,25,0.92);
