--- a/catalog/view/theme/default/stylesheet/category.css
+++ b/catalog/view/theme/default/stylesheet/category.css
@@ -232,10 +232,9 @@ h4, h5, .h4, .h5 {
 
 .list_thumbnail a img {
     display: block;
-    margin-left: 30px;
-    
+    margin-left: 30px;    
     height: 57px;
-    margin: 4px 30px;
+    margin: 10px 30px;
     width: 39px;
 }
 .nav_pagi{
@@ -302,7 +301,8 @@ h4, h5, .h4, .h5 {
 .manufacturer-product {
      border: 1px solid #CDCDCD;
     height: 90px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    margin-top: 4px;
     padding-top: 10px;
     width: 100px;
 }
