--- a/trunk/catalog/view/theme/default/stylesheet/slideshow.css
+++ b/trunk/catalog/view/theme/default/stylesheet/slideshow.css
@@ -143,7 +143,7 @@
 }
 .slideshow .nivo-caption {
 	text-shadow:none;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Myriad Pro;
 }
 .slideshow .nivo-caption a {
 	color:#efe9d1;
