--- a/trunk/catalog/view/theme/default/stylesheet/style000.css
+++ b/trunk/catalog/view/theme/default/stylesheet/style000.css
@@ -2600,7 +2600,7 @@ font-size:.9rem;
 }
 .prd-brand a{
 	display: block;
-        font-family: 'UTM_Bebas';
+        font-family: 'Myriad Pro;
         font-size: 15px;
 }
 .lbPrice {
