--- a/catalog/view/theme/default/stylesheet/stylesheet_news.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet_news.css
@@ -20,7 +20,7 @@ margin-bottom: 20px;
 
 	padding: 8px 10px 7px 10px;
 
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Myriad Pro;
 
 	font-size: 14px;
 
